--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container">
-        <img src="image/logo-removebg2.png" class="logo">
+        <img src="https://sv1.picz.in.th/images/2023/05/21/FgdCC8.png" class="logo">
         <div class="content">
             <p>Website Made By Peax</p>
             <h1>COMING <span>SOON</span></h1>
@@ -32,7 +32,7 @@
                     <span>Seconds</span>
                 </div>
             </div>
-            <button type="button" onclick="location.href='https://instagram.com/rrmathemagic.camp?igshid=MzRlODBiNWFlZA=='">CONNECT WITH US<img src="image/instagram-icon.png"></button>
+            <button type="button" onclick="location.href='https://instagram.com/rrmathemagic.camp?igshid=MzRlODBiNWFlZA=='">CONNECT WITH US<img src="https://sv1.picz.in.th/images/2023/05/21/Fgd5Fy.th.png"></button>
         <img src="image/harry-fly.png" class="book" type="video/mp4">
     </div>
 
