--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="https://i.ibb.co/1739Br0/thumbnail.png" />
+    <meta property="og:title" content="ปู้นๆ เตรียมตัวออกเดินทางไปกับขบวนรถไฟด่วนกับ RR MATHEMAGIC CAMP 2023" />
     <title>RR MATHEMAGIC CAMP</title>
     <link href="style.css" rel="stylesheet" type="text/css">
     <link rel="icon" type="image/png" href="image/logo-removebg.png">
@@ -32,35 +34,37 @@
                     <span> Seconds </span>
                 </div>
             </div>
-            <button type="button" onclick="location.href='https://instagram.com/rrmathemagic.camp?igshid=MzRlODBiNWFlZA=='">CONNECT WITH US<img src="https://sv1.picz.in.th/images/2023/05/21/Fgd5Fy.th.png"></button>
-        <img src="image/harry-fly.png" class="book" type="video/mp4">
-    </div>
+            <button type="button"
+                onclick="location.href='https://instagram.com/rrmathemagic.camp?igshid=MzRlODBiNWFlZA=='">CONNECT WITH
+                US<img src="https://sv1.picz.in.th/images/2023/05/21/Fgd5Fy.th.png"></button>
+            <img src="image/harry-fly.png" class="book" type="video/mp4">
+        </div>
 
-    <script>
-        var countDownDate = new Date("Jul 01, 2023 00:00:00").getTime();
-        var x = setInterval(function () {
-            var now = new Date().getTime();
-            var distance = countDownDate - now;
-            var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-            var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-            var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-            var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+        <script>
+            var countDownDate = new Date("Jul 01, 2023 00:00:00").getTime();
+            var x = setInterval(function () {
+                var now = new Date().getTime();
+                var distance = countDownDate - now;
+                var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+                var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+                var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+                var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
-            document.getElementById("days").innerHTML = days;
-            document.getElementById("hours").innerHTML = hours;
-            document.getElementById("minutes").innerHTML = minutes;
-            document.getElementById("seconds").innerHTML = seconds;
+                document.getElementById("days").innerHTML = days;
+                document.getElementById("hours").innerHTML = hours;
+                document.getElementById("minutes").innerHTML = minutes;
+                document.getElementById("seconds").innerHTML = seconds;
 
-            if (distance < 0) {
-                clearInterval(x);
-                document.getElementById("days").innerHTML = "00";
-                document.getElementById("hours").innerHTML = "00";
-                document.getElementById("minutes").innerHTML = "00";
-                document.getElementById("seconds").innerHTML = "00";
-            }
+                if (distance < 0) {
+                    clearInterval(x);
+                    document.getElementById("days").innerHTML = "00";
+                    document.getElementById("hours").innerHTML = "00";
+                    document.getElementById("minutes").innerHTML = "00";
+                    document.getElementById("seconds").innerHTML = "00";
+                }
 
-        }, 1000);
-    </script>
+            }, 1000);
+        </script>
 
 
 
