--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="https://i.ibb.co/1739Br0/thumbnail.png" />
-    <meta property="og:title" content="ปู้นๆ เตรียมตัวออกเดินทางไปกับขบวนรถไฟด่วนกับ RR MATHEMAGIC CAMP 2023" />
+    <meta property="og:title" content="RR MATHEMAGIC CAMP" />
+    <meta property="og:description" content="ปู้นๆ เตรียมตัวออกเดินทางไปกับขบวนรถไฟด่วนกับ RR MATHEMAGIC CAMP 2023" />
     <title>RR MATHEMAGIC CAMP</title>
     <link href="style.css" rel="stylesheet" type="text/css">
     <link rel="icon" type="image/png" href="image/logo-removebg.png">
