--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <img src="https://sv1.picz.in.th/images/2023/05/21/FgdCC8.png" class="logo">
         <div class="content">
-            <p>Website Made By Peax</p>
+            <p>©All rights reserved Peax</p>
             <h1>COMING <span>SOON</span></h1>
             <div class="launch-time">
                 <div>
@@ -36,8 +36,7 @@
                 </div>
             </div>
             <button type="button"
-                onclick="location.href='https://instagram.com/rrmathemagic.camp?igshid=MzRlODBiNWFlZA=='">CONNECT WITH
-                US<img src="https://sv1.picz.in.th/images/2023/05/21/Fgd5Fy.th.png"></button>
+                onclick="location.href='https://instagram.com/rrmathemagic.camp?igshid=MzRlODBiNWFlZA=='">CONNECT WITH US<img src="https://sv1.picz.in.th/images/2023/05/21/Fgd5Fy.th.png"></button>
             <img src="image/harry-fly.png" class="book" type="video/mp4">
         </div>
 
