--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <title>RR MATHEMAGIC CAMP</title>
     <link href="style.css" rel="stylesheet" type="text/css">
     <link rel="icon" type="image/png" href="image/logo-removebg.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@300;400;500&family=Prompt:ital,wght@0,200;0,300;0,400;0,500;0,700;1,500&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -36,7 +41,8 @@
                 </div>
             </div>
             <button type="button"
-                onclick="location.href='https://instagram.com/rrmathemagic.camp?igshid=MzRlODBiNWFlZA=='">CONNECT WITH US<img src="https://sv1.picz.in.th/images/2023/05/21/Fgd5Fy.th.png"></button>
+                onclick="location.href='https://instagram.com/rrmathemagic.camp?igshid=MzRlODBiNWFlZA=='">CONNECT WITH
+                US<img src="https://sv1.picz.in.th/images/2023/05/21/Fgd5Fy.th.png"></button>
             <img src="image/harry-fly.png" class="book" type="video/mp4">
         </div>
 
@@ -65,10 +71,12 @@
 
             }, 1000);
         </script>
-
-
-
-
+    </div>
+    <div class="page2">
+        <div class="text">
+            <div>
+                <p class="title">ปู้นๆ เตรียมตัวออกเดินทางไปกับขบวนรถไฟด่วนกับ RR MATHEMAGIC CAMP 2023</p>
+            </div>
+        </div>
+    </div>
 </body>
-
-</html>
