--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
                 </div>
             </div>
             <button type="button"
-                onclick="location.href='https://instagram.com/rrmathemagic.camp?igshid=MzRlODBiNWFlZA=='">CONNECT WITH
-                US<img src="https://sv1.picz.in.th/images/2023/05/21/Fgd5Fy.th.png"></button>
+                onclick="location.href='https://docs.google.com/forms/d/e/1FAIpQLSfYqD5OpFQN71Bv6rQEPrh_Qqm_DOeOOkfLyDLqa3RRXlexTQ/closedform'">CLICK เพื่อสมัคร !!<img src="image/book harry.png"></button>
+            <!--<button onClick="document.getElementById('page-2').scrollIntoView();">Explore</button>-->
+
             <img src="image/harry-fly.png" class="book" type="video/mp4">
         </div>
 
@@ -75,7 +76,8 @@
     <div class="page2">
         <div class="text">
             <div>
-                <p class="title">ปู้นๆ เตรียมตัวออกเดินทางไปกับขบวนรถไฟด่วนกับ RR MATHEMAGIC CAMP 2023</p>
+                <p class="title">ปู้นๆ เตรียมตัวออกเดินทางไปกับขบวนรถไฟด่วนกับ RR MATHEMAGIC CAMP 2023<br>
+                สมัครผ่าน Google from ได้แล้ววันนี้ !! </p>
             </div>
         </div>
     </div>
