--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="text">
             <div>
                 <p class="title">ปู้นๆ เตรียมตัวออกเดินทางไปกับขบวนรถไฟด่วนกับ RR MATHEMAGIC CAMP 2023<br>
-                สมัครผ่าน Google from ได้แล้ววันนี้ !! </p>
+                สมัครผ่าน Google Form ได้แล้ววันนี้ !! </p>
             </div>
         </div>
     </div>
