--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                 </div>
             </div>
             <button type="button"
-                onclick="location.href='https://docs.google.com/forms/d/e/1FAIpQLSfYqD5OpFQN71Bv6rQEPrh_Qqm_DOeOOkfLyDLqa3RRXlexTQ/closedform'">CLICK เพื่อสมัคร !!<img src="image/book harry.png"></button>
+                onclick="location.href='https://docs.google.com/forms/d/e/1FAIpQLSfYqD5OpFQN71Bv6rQEPrh_Qqm_DOeOOkfLyDLqa3RRXlexTQ/closedform'">CLICK
+                เพื่อสมัคร !!<img src="image/book harry.png"></button>
             <!--<button onClick="document.getElementById('page-2').scrollIntoView();">Explore</button>-->
 
             <img src="image/harry-fly.png" class="book" type="video/mp4">
@@ -77,8 +78,9 @@
         <div class="text">
             <div>
                 <p class="title">ปู้นๆ เตรียมตัวออกเดินทางไปกับขบวนรถไฟด่วนกับ RR MATHEMAGIC CAMP 2023<br>
-                สมัครผ่าน Google Form ได้แล้ววันนี้ !! </p>
+                    สมัครผ่าน Google Form ได้แล้ววันนี้ !!<br></p>
             </div>
         </div>
+        <img src="image/information.PNG" alt="information" class="center">
     </div>
 </body>
