--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
                     สมัครผ่าน Google Form ได้แล้ววันนี้ !!<br></p>
             </div>
         </div>
-        <img src="image/information.PNG" alt="information" class="center">
+        <p>
+            <img src="image/information.PNG" class="centerImage" alt="CH Logo" width="350">
+        </p>
     </div>
 </body>
