--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                     สมัครผ่าน Google Form ได้แล้ววันนี้ !!<br></p>
             </div>
         </div>
-        <p>
-            <img src="image/information.PNG" class="centerImage" alt="CH Logo" width="350">
-        </p>
+        <div class="test">
+            <img src="image/information.PNG" width="80%" >
+        </div>
     </div>
 </body>
