--- a/index.html
+++ b/index.html
@@ -78,11 +78,12 @@
         <div class="text">
             <div>
                 <p class="title">ปู้นๆ เตรียมตัวออกเดินทางไปกับขบวนรถไฟด่วนกับ RR MATHEMAGIC CAMP 2023<br>
-                    สมัครผ่าน Google Form ได้แล้ววันนี้ !!<br></p>
+                    สมัครผ่าน Google Form ได้แล้ววันนี้ !!<br>
+                    - 22 มิถุนายน 2566</p>
             </div>
         </div>
         <div class="test">
-            <img src="image/information.PNG" width="80%" >
+            <img src="image/information.PNG" width="80%">
         </div>
     </div>
 </body>
