--- a/index.html
+++ b/index.html
@@ -73,6 +73,15 @@
 
             }, 1000);
         </script>
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q6DR3B5W9B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Q6DR3B5W9B');
+</script>
     </div>
     <div class="page2">
         <div class="text">
