--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@300;400;500&family=Prompt:ital,wght@0,200;0,300;0,400;0,500;0,700;1,500&display=swap"
         rel="stylesheet">
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-5BMMNZC2GV"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZS5QN5GE3B"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-5BMMNZC2GV');
+  gtag('config', 'G-ZS5QN5GE3B');
 </script>
 </head>
 
