--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="page2">
         <div class="text">
             <div>
-                <p class="title">ปู้นๆๆ เตรียมตัวออกเดินทางไปกับขบวนรถไฟด่วนกับ RR MATHEMAGIC CAMP 2023<br>
+                <p class="title">ปู้น ๆ เตรียมตัวออกเดินทางไปกับขบวนรถไฟด่วนกับ RR MATHEMAGIC CAMP 2023<br>
                     สมัครผ่าน Google Form ได้แล้ววันนี้ !!<br>
                     - 22 มิถุนายน 2566</p>
             </div>
