--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <img src="https://sv1.picz.in.th/images/2023/05/21/FgdCC8.png" class="logo">
         <div class="content">
             <p>©All rights reserved Peax</p>
-            <h1>REGISTER <span>NOW!</span></h1>
+            <h1>SEE YOU <span>SOON!</span></h1>
             <div class="launch-time">
                 <div>
                     <p id="days">00</p>
