--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
         <div class="text">
             <div>
                 <p class="title">ปู้น ๆ เตรียมตัวออกเดินทางไปกับขบวนรถไฟด่วนกับ RR MATHEMAGIC CAMP 2023<br>
-                    สมัครผ่าน Google Form ได้แล้ววันนี้ !!<br>
-                    - 22 มิถุนายน 2566</p>
+                    แล้วเจอกันน !!<br>
+                    1 กรกฎาคม 2566</p>
             </div>
         </div>
         <div class="test">
